# Gooberberg-Terminal-v2

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
apps/api/: main.py
apps/api/routes/: backtests.py  datasets.py  experiments.py  ingestion.py  jobs.py  models.py  monitoring.py
apps/ui/: Home.py
apps/ui/pages/: 1_Datasets.py  2_Model_Definitions.py  3_Experiments.py  4_Backtests.py  5_Monitoring.py
docs/: architecture.md  data_lake.md  experiment_queueing.md  hpc_setup.md  massive_provider.md
scripts/: init_metadata_db.py  worker_dev.sh
src/quant_platform/: __init__.py
src/quant_platform/backtesting/: __init__.py  artifacts.py  engine.py  metrics.py  schemas.py
src/quant_platform/cli/: dev.py
src/quant_platform/common/: __init__.py  enums.py  ids.py  paths.py  time.py
src/quant_platform/config/: __init__.py  schemas.py  settings.py
src/quant_platform/datasets/: __init__.py  console.py  materialization.py  registry.py  schemas.py
src/quant_platform/experiments/: artifacts.py  queueing.py  registry.py  schemas.py
src/quant_platform/jobs/: __init__.py  queue.py  tasks.py  workers.py
src/quant_platform/models/: __init__.py  (+7 more)
tests/: conftest.py
tests/unit/: test_api_routes.py  test_backtesting.py  test_config_validation.py  test_coverage.py  test_dataset_console.py  test_datasets.py  test_experiment_queueing.py  test_ingestion.py  test_job_logs.py  test_massive_provider.py  test_mock_ingestion.py  test_models.py  test_monitoring.py  test_storage_paths.py  test_training_job_tasks.py  test_training_runner.py
(+20 files in other folders)
